--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13"
   },
